# helix

./: .gitignore  README.md  README_EN.md  context-manager-architecture(1).md  helix_project_report.md  index.html  install.ps1  install.sh  issue_body.md  issue_light_mode.md  package-lock.json  package.json  pr_body.md  tailwind.config.js  test_100_rounds.ps1  test_results.txt  test_script.js
.agent-skills/: convert_md_to_pdf.js  folder_scanner_pdf.js
Casks/: opsclaw-tools.rb
src-tauri/: Cargo.toml  tauri.conf.json  test_plugin.rs
src-tauri/examples/: test_url.rs
src-tauri/icons/: icon.icns
src-tauri/patches/agents-core/: .cargo_vcs_info.json  Cargo.toml
src-tauri/patches/agents-core/src/: prompts.rs  security.rs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: cloudflared.rs  mod.rs
src-tauri/src/models/: config.rs
src-tauri/src/modules/: agent.rs  agent_tools.rs  api_server.rs  browser_engine.rs  browser_test.rs  channels.rs  cloudflared.rs  commands.rs  cron.rs  database.rs  evomap.rs  filehelper.rs  hooks.rs  i18n.rs  kubeconfig.rs  media_understanding.rs  memory.rs  messaging.rs  mod.rs  model_selection.rs  plugins.rs  sandbox.rs  security.rs  sessions.rs  skills.rs  streaming.rs  subagents.rs  tray.rs  usage.rs
src-tauri/src/modules/agent/: commands.rs  context_manager.rs  core.rs  hooks.rs  memory.rs  mod.rs  plugins.rs  sandbox.rs  skills.rs  subagents.rs  tools.rs
src-tauri/src/modules/ai/: chat.rs  context.rs  link_understanding.rs  media_understanding.rs  mod.rs  model_selection.rs  providers.rs  stream_events.rs  usage.rs
src-tauri/src/modules/app/: cron.rs  environments.rs  mcp.rs  mod.rs  scheduler.rs  tray.rs  update_checker.rs  workspace.rs
src-tauri/src/modules/browser/: mod.rs  tests.rs
src-tauri/src/modules/chat/: channels.rs  mod.rs  sessions.rs
src-tauri/src/modules/cloud/: aliyun.rs  mod.rs
src-tauri/src/modules/feishu/: api.rs  commands.rs  gateway.rs  mod.rs
src-tauri/src/modules/filehelper/: bot_api.rs  bot_commands.rs  commands.rs  mod.rs  protocol.rs
src-tauri/src/modules/infra/: api_server.rs  config.rs  database.rs  i18n.rs  log_bridge.rs  logger.rs  mod.rs  notifications.rs  security.rs
src-tauri/src/modules/lan/: lan_client.rs  lan_server.rs  mod.rs  udp_discovery.rs
src-tauri/src/utils/: http.rs  mod.rs  truncate.rs
(+73 files in other folders)
