[package]
name = "helix"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "helix_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.2.5", features = [] }

[dependencies]
tauri = { version = "^2.2.5", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "multipart"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
image = { version = "0.25.9", default-features = false, features = ["png", "webp"] }
thiserror = "2.0.17"
serde_yaml = "0.9"
regex = "1.12.2"
once_cell = "1.19"
parking_lot = "0.12"
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
libc = "0.2"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
cron = "0.15"
base64 = "0.22"
futures = "0.3.32"
async-openai = "0.27"
sysinfo = "0.38.2"
chromiumoxide = { version = "0.8.0", features = ["tokio"] }
lazy_static = "1.5.0"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
